# PSU_CGI_course

./: CMakeLists.txt  README.md  main.cpp
cgi_chekunov_release/: glad.lib  imgui.ini
cgi_chekunov_release/shaders/: imgui.ini  lb5.frag  lb5.vert
internal/: lb1.h  lb2.h  lb3.h  lb4.h  lb5.h  point2d.h  point3d.h  shader_utils.h  utils.h
shaders/: 3d.frag  3d.vert  frag.frag  lb5.frag  lb5.vert  vert.vert
